<resources>
    <string name="app_name">基站采集</string>
    <string name="create_crime">新建案件</string>
    <string name="back">返回</string>
    <string name="input_crime_name">请输入案件名称:</string>
    <string name="create_crime_button">创建案件</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="input_crime_time">录入案发时间:</string>
    <string name="crime_time_start">开始:</string>
    <string name="crime_time_end">结束:</string>
    <string name="ok">确认</string>
    <string name="reset">清除</string>
    <string name="gps_string">GPS采集点位置：</string>
    <string name="gps_location">GPS定位信息:</string>
    <string name="prevers_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="location1">地点1：</string>
    <string name="location2">地点2：</string>
    <string name="location3">地点3：</string>
    <string name="location4">地点4：</string>
    <string name="location5">地点5：</string>
    <string name="collection">点击采集基站信息</string>
    <string name="collection_runing">采集中</string>
    <string name="collection_over">采集基站信息成功</string>
    <string name="collection_fail">未采集基站信息</string>
    <string name="text_list">案件列表</string>
    <string name="gps_location_fail">定位失败，事后补采</string>
    <string name="case_name_empty">请填写案件名称</string>
    <string name="location_name_empty">请填写地点名称</string>
    <string name="msg_alert">警告</string>
    <string name="msg_alert_content">继续补录未完成的案件？</string>
    <string name="msg_alert_continue">补录</string>
    <string name="msg_alert_new_create">新建</string>
    <string name="msg_alert_collection_ing">基站信息采集中,请稍候！</string>
    <string name="msg_alert_save">录入信息保存成功！</string>
    <string name="button_done">完成</string>
    <string name="msg_case_info_confirm">案件录入信息确认</string>
    <string name="case_name">案件名称</string>
    <string name="crime_time_start_info">开始时间:</string>
    <string name="crime_time_end_info">结束时间:</string>
    <string name="list_case_name">案件名称:</string>
    <string name="list_case_time">案发时间:</string>
    <string name="list_delete">删除</string>
    <string name="case_save_done">案件保存成功！</string>
    <string name="case_delete_done">案件删除成功！</string>
    <string name="gps_location_ing">GPS 定位中</string>
    <string name="default_loading">Loading…</string>
    <string name="can_not_save_alert">基站信息未采集，无法保存！</string>
</resources>
