<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_crime_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.newcrime.CreateCrimeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_create_crime_p2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/toolbar_left_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size"
                android:textColor="#ffffffff"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/toolbar_title" />
            <Button
                android:id="@+id/toolbar_right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/input_location_1_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/paddingleft"
        android:paddingTop="@dimen/paddingtop"
        android:layout_below="@id/toolbar_create_crime_p2">

        <TextView
            android:id="@+id/input_location_1"
            android:text="@string/location1"
            android:textSize="@dimen/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/location1_num_count"
            android:textSize="@dimen/text_size"
            android:paddingLeft="@dimen/paddingleft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.android.newcrime.utils.ClearableEditText
        android:id="@+id/location_1_editview"
        android:layout_below="@id/input_location_1_layout"
        android:paddingLeft="@dimen/paddingleft"
        android:paddingRight="@dimen/paddingleft"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/positon_name_hight" />

    <Button
        android:id="@+id/location_collection_1_button"
        android:layout_below="@+id/location_1_editview"
        android:text="@string/collection"
        android:textSize="@dimen/text_size"
        android:paddingLeft="@dimen/paddingleft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/input_location_2_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/paddingleft"
        android:orientation="horizontal"
        android:layout_below="@id/location_collection_1_button">

        <TextView
            android:id="@+id/input_location_2"
            android:text="@string/location2"
            android:textSize="@dimen/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/location2_num_count"
            android:textSize="@dimen/text_size"
            android:paddingLeft="@dimen/paddingleft"
            android:text="0/35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.android.newcrime.utils.ClearableEditText
        android:id="@+id/location_2_editview"
        android:layout_below="@id/input_location_2_layout"
        android:paddingLeft="@dimen/paddingleft"
        android:paddingRight="@dimen/paddingleft"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/positon_name_hight" />

    <Button
        android:id="@+id/location_collection_2_button"
        android:layout_below="@+id/location_2_editview"
        android:text="@string/collection"
        android:paddingLeft="@dimen/paddingleft"
        android:textSize="@dimen/text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/input_location_3_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/paddingleft"
        android:layout_below="@id/location_collection_2_button">

        <TextView
            android:id="@+id/input_location_3"
            android:text="@string/location3"
            android:textSize="@dimen/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/location3_num_count"
            android:paddingLeft="@dimen/paddingleft"
            android:textSize="@dimen/text_size"
            android:text="0/35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.android.newcrime.utils.ClearableEditText
        android:id="@+id/location_3_editview"
        android:layout_below="@id/input_location_3_layout"
        android:paddingLeft="@dimen/paddingleft"
        android:paddingRight="@dimen/paddingleft"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/positon_name_hight" />

    <Button
        android:id="@+id/location_collection_3_button"
        android:layout_below="@+id/location_3_editview"
        android:text="@string/collection"
        android:textSize="@dimen/text_size"
        android:paddingLeft="@dimen/paddingleft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/bottom_left_button"
        android:text="@string/prevers_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/bottom_right_button"
        android:text="@string/next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
